# WebGL2Emscripten

./: .gitignore  CMakeLists.txt  README.md  main.cpp  ogre.geom  screen_shader.frag  screen_shader.vert  shader.frag  shader.vert  shell_minimal.html  tree.geom  tree.tga
assets/models/: model.geom  ogre.geom  tree.mtl
assets/web/: shell_minimal.html
shaders/: screen_shader.vert  shader.vert
source/: main.cpp
source/core/: application.cpp  application.h  transform.h  window.cpp  windows.h
source/renderer/: camera.h  fbo.cpp  fbo.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h
source/scene/: entity.cpp  entity.h
